basic structure creating

--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
-
    <head>
-      <title>HTML Tables</title>
+      <title>Hyperlink Example</title>
+      <meta name = "keywords" content = "HTML, CSS, JS, Login" />
+      <meta name = "description" content = "Learning about web development" />
+      <meta name = "revised" content = "Udara Abeyrathne 31.01.2022" />
+      <link rel="stylesheet" type="text/css" href="index.css">
    </head>
-	
+   
    <body>
-      <table border = "1">
-         <tr>
-            <td>Row 1, Column 1</td>
-            <td>Row 1, Column 2</td>
-         </tr>
-         
-         <tr>
-            <td>Row 2, Column 1</td>
-            <td>Row 2, Column 2</td>
-         </tr>
-      </table>
+      <div class="head-image">
+        <div class="head-text">
+          <h1 style="font-size:50px">welcome to the hotel මහනුවර</h1>
+          <h2>luxury villa and spa</h2>
+          <button>Reserve</button>
+          <div class="nilame_img">
+          </div>
+        </div>
+      </div>
+      <div class="frames">
+         <iframe src = "index_top.html" width = "20%" height = "700" title="first">
+            Sorry your browser does not support inline frames.
+         </iframe>
+         <iframe src = "index_main.html" width = "58%" height = "700" title="second">
+            Sorry your browser does not support inline frames.
+         </iframe>
+         <iframe src = "index_bottom.html" width = "20%" height = "700" title="third">
+            Sorry your browser does not support inline frames.
+         </iframe>
+      </div>
       
    </body>
+   
 </html>
